# Reto-II-NLP-Avanzado

./: README.md  pyproject.toml
outputs/: doc_topics.csv  llm_error.txt  report.md  resultados.md  topics_labels.csv  topics_top_words.csv
outputs/cache/: doc_topics_f6b5f3a7c1abe7c5c7eee4adf7670cf9b4816acc88182a3bc5a4a07da19f7f8f_1f42bc394413a65e2c2509dc88b9d4b985ef906ccff6f8e9b610485e48264ee1.pkl  lda_f6b5f3a7c1abe7c5c7eee4adf7670cf9b4816acc88182a3bc5a4a07da19f7f8f_1f42bc394413a65e2c2509dc88b9d4b985ef906ccff6f8e9b610485e48264ee1.pkl  vectorize_f6b5f3a7c1abe7c5c7eee4adf7670cf9b4816acc88182a3bc5a4a07da19f7f8f_8286c7822eb3039a91a0661befcad5be17b9ee10d50e42106a17c6b55cea7582.pkl
outputs/lda_model/: config.json  model.pkl  vectorizer.pkl
src/: cache.py  config.py  interpret_top_words.py  interpret_with_llm.py  lda_infer.py  lda_train.py  openai_client.py  preprocess.py  run_pipeline.py  vectorize.py
src/reto_lda_chatgpt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
