[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reto-lda-chatgpt"
version = "0.1.0"
description = "Topic modeling con LDA y etiquetas con ChatGPT"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "openai>=1.0.0",
    "python-dotenv",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyterlab",
]